[metadata]
name = transformers
version = 0.1.0
author = Andre Bajorat
description = Defines some custom sklearn transformer
long_description = file: README.md
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
packages = find:

install_requires =
    pandas
    scikit-learn
    typing
    typing
    numpy 
package_dir=
    =src
[options.packages.find]
where=src
